--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 GENAI_MODEL=gemini-1.5-flash
-GEN_AI_API_KEY=AxxxxxxxxxxQ
-JENKINS_USER=rxxxxxl
-JENKINS_TOKEN=1xxxxxxxxx8
-JENKINS_URL=https://xxxx-jenkins.xx.x/job/
+GEN_AI_API_KEY=your_gemini_api_key_here
+JENKINS_USER=your_jenkins_username
+JENKINS_TOKEN=your_jenkins_api_token_here
+JENKINS_URL=https://your-jenkins-url/job/
 JENKINS_SUFFIX=/buildWithParameters
 FLASK_PORT=3000
